--- a/appleClone/style.css
+++ b/appleClone/style.css
@@ -1,3 +1,16 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+img {
+	max-width: 100%;
+}
+body {
+	font-size: 20px; 
+	font-family: 'Montserrat', sans-serif;
+}
+
+
 
 /* Footer Styling */
 .footer-wrapper {
