--- a/appleClone/style.css
+++ b/appleClone/style.css
@@ -205,7 +205,7 @@ body {
 
 /* Third Highlight Section */
 .third-highlight-wrapper {
-	background-image: url("../images/home/iphone11-bg.jpg");
+	background-image: url("images/home/iphone11-bg.jpg");
 	height: 580px;
 	background-position: center;
 	background-repeat: no-repeat;
