--- a/appleClone/style.css
+++ b/appleClone/style.css
@@ -181,7 +181,7 @@ body {
 
 /* Second Highlight Section */
 .second-hightlight-wrapper {
-	background-image: url("./images/home/iphone11-pro-bg.jpg");
+	background-image: url("images/home/iphone11-pro-bg.jpg");
 	height: 580px;
 	background-position: center;
 	background-repeat: no-repeat;
