--- a/appleClone/style.css
+++ b/appleClone/style.css
@@ -232,7 +232,7 @@ body {
 	padding-top: 54px;
 }
 .fourth-heghlight-wrapper .left-side-wrapper {
-	background-image:  url("../images/home/watch-series-5.jpg"); 
+	background-image:  url("images/home/watch-series-5.jpg"); 
 }
 .right-side-wrapper {
 	height: 580px;
@@ -245,7 +245,7 @@ body {
 	padding-top: 54px;
 }
 .fourth-heghlight-wrapper .right-side-wrapper {
-	background-image:  url("../images/home/apple-card.jpg"); 
+	background-image:  url("images/home/apple-card.jpg"); 
 }
 .description-wraper {
 	max-width: 430px;
@@ -261,10 +261,10 @@ body {
   background: #fff;
 }
 .fifth-heghlight-wrapper .left-side-wrapper {
-	background-image:  url("../images/home/apple-tv-background.jpg"); 
+	background-image:  url("images/home/apple-tv-background.jpg"); 
 }
 .fifth-heghlight-wrapper .right-side-wrapper {
-	background-image:  url("../images/home/air-pods.jpg"); 
+	background-image:  url("images/home/air-pods.jpg"); 
 	color: #fff; 
 	background-size: initial;
 	background-color: #000;
@@ -295,13 +295,13 @@ body {
   background: #fff;
 }
 .sixth-heghlight-wrapper .left-side-wrapper {
-	background-image:  url("../images/home/macbook-pro.jpg"); 
+	background-image:  url("images/home/macbook-pro.jpg"); 
 	background-size: initial;
 	background-color: #fafafa;
 	background-position: bottom;
 }
 .sixth-heghlight-wrapper .right-side-wrapper {
-	background-image:  url("../images/home/new-ipad.jpg"); 
+	background-image:  url("images/home/new-ipad.jpg"); 
 }
 .product-title-small {
 	font-weight: 700;
